fixed misalignment bug in internet explorer caused by known flexbox bugs

--- a/src/sass/myservice-widgets.scss
+++ b/src/sass/myservice-widgets.scss
@@ -89,9 +89,8 @@
 
     &.card--claims-col-3 {
       @include uikit-media(sm) {
-        max-width: 370px;
+        max-width: 360px;
       }
-      flex-basis: 20%;
       min-width: 300px;
     }
   }
@@ -146,6 +145,7 @@
     display: flex;
     flex: 1;
     flex-direction: column;
+    width: 100%;
   }
 
   .fal {
